--- a/views/list.ejs
+++ b/views/list.ejs
@@ -7,23 +7,27 @@
         </h1>
     </div>
 
-    <div class="box" >    
-            <% for(var i=0;i< newListItems.length;i++){ %>
-                
-                <div class="item" >
-                <input type="checkbox">
-                <p><%=newListItems[i] %></p>
-                </div>
-             <% } %>  
-         
+    <div class="box" >
 
+        <%  newListItems.forEach((item)=>{%>
+            <form action="/delete" method="post">
+            <div class="item" >
+            <input type="checkbox" name="checkbox" value="<%=item._id%>"  onchange="this.form.submit()" >
+            <p><%=item.name %></p>
+            </div>
+            <input type="hidden" name="listName" value=<%=listTitle%>  ></input>
+            </form>
+
+        <%   })    %>
+      
          <form class="item" action="/" method="post" >
-
             <input type="text" name="newItem" placeholder="new item" autocomplete="off" >
             <button type="submit" name="list" value=<%=listTitle%>  >+</button>
         </form>
-
     </div> 
+    <div> <a href="http://localhost:3000/work">work</a>
+        <a href="http://localhost:3000/">Home</a>
+    </div>
 
     <%- include("footer")  -%>
 
